--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+    // SQLITE
+    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
+    runtimeOnly 'org.hibernate.orm:hibernate-community-dialects:6.2.4.Final'
 }
 
 tasks.named('test') {
