feat: [F-000] Swagger 연동

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,7 +24,9 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
 
-
+springdoc:
+  swagger-ui:
+    path: /swagger
 
 jwt:
   secret: ${jwt_secret}
