--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -30,6 +30,13 @@ spring:
     redis:
       host: localhost
       port: 6379
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${google_mail_username}
+    password: ${google_mail_password}
 logging:
   level:
     org.hibernate.SQL: debug
+jwt:
+  secret: ${jwt_secret}
