build: 웹소켓 관련 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
