--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:sqlite:db.sqlite
-    driver-class-name: org.sqlite.JDBC
+    url: jdbc:h2:../test
     username: ${db_username}
     password: ${db_password}
+    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
@@ -13,7 +13,7 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
-    database-platform: org.hibernate.community.dialect.SQLiteDialect
+    database-platform: org.hibernate.dialect.H2Dialect
 
   sql:
     init:
