--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-    // SQLite
-    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
-    runtimeOnly 'org.hibernate.orm:hibernate-community-dialects:6.2.4.Final'
+    // h2
+    runtimeOnly 'com.h2database:h2'
 
 	// JJWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
