--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:../test
+    url: jdbc:h2:./test
     username: ${db_username}
     password: ${db_password}
     driver-class-name: org.h2.Driver
