--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -2,6 +2,7 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
   datasource:
     url: jdbc:mysql://localhost:3307/team8
     username: {db_username}
