--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,6 +28,15 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
 
+  mvc:
+    # /static/ 으로 시작하는 요청에 대해 정적 파일 서빙
+    static-path-pattern: /static/**
+  web:
+    resources:
+      # 정적 파일 탐색 장소
+      static-locations: file:media/,classpath:/static
+
+
   mail:
     host: smtp.gmail.com
     port: 587
