--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -36,6 +36,10 @@ spring:
     port: 587
     username: ${google_mail_username}
     password: ${google_mail_password}
+  rabbitmq:
+    host: ${rabbit_host}
+    username: ${rabbit_user}
+    password: ${rabbit_password}
 logging:
   level:
     org.hibernate.SQL: debug
