refactor: rabbitmq 추가로 인한 Message Broker 설정추가

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -47,3 +47,8 @@ jwt:
   secret: ${jwt_secret}
 server:
   port: 8081
+external-broker:
+  host: ${broker_host}
+  port: ${broker_port}
+  username: ${broker_username}
+  passcode: ${broker_passcode}
